--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" style="width: 100%; height: 100%">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Yohann Potico | Resume</title>
+    <title>CEOA White Paper</title>
   </head>
   <body style="width: 100%; height: 100%; margin: 0">
     <iframe
-      src="https://docs.google.com/gview?url=https://github.com/yh2n/yp_resume/raw/main/ceoa_white_paper.pdf.pdf&embedded=true"
+      src="https://docs.google.com/gview?url=https://github.com/yh2n/ny_coin_white_paper/blob/main/ceoa_white_paper.pdf&embedded=true"
       style="width: 100%; height: 100%"
     ></iframe>
   </body>
