--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="width: 100%; height: 100%; margin: 0">
     <iframe
-      src="https://docs.google.com/gview?url=https://github.com/yh2n/ny_coin_white_paper/blob/main/ceoa_white_paper.pdf&embedded=true"
+      src="https://github.com/yh2n/ny_coin_white_paper/blob/main/ceoa_white_paper.pdf&embedded=true"
       style="width: 100%; height: 100%"
     ></iframe>
   </body>
