--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>CEOA White Paper</title>
   </head>
   <body style="width: 100%; height: 100%; margin: 0">
+    <p>++++++++++++++++++++++++++++++++</p>
     <iframe
-      src="https://github.com/yh2n/ny_coin_white_paper/blob/main/ceoa_white_paper.pdf&embedded=true"
+      src="https://docs.google.com/gview?url=https://github.com/yh2n/ny_coin_white_paper/blob/main/ceoa_white_paper.pdf&embedded=true"
       style="width: 100%; height: 100%"
     ></iframe>
   </body>
